<resources>
    <string name="app_name">Notes</string>
    <string name="str_title">Title</string>
    <string name="str_start_writing_here">Start writing here…</string>
    <string name="new_note">New note</string>
    <string name="str_search_note">Search Note</string>
    <string name="str_delete_notes">Delete notes</string>
    <string name="str_save_note">Save note\n</string>
    <string name="str_delete_note">Delete this note</string>
    <string name="str_back">Back</string>
    <string name="str_seeking">Seeking</string>
    <string name="search_button_description">Search button</string>
    <string name="home_button_description">Home button</string>
    <string name="str_empty_tittle">tittle</string>
    <string name="str_start_date">00.00.000</string>
    <string name="str_start_id">0</string>
    <string name="str_question_title">Are you sure?</string>
    <string name="str_question_message">This will delete all the notes!</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_favorite">Favorite</string>
    <string name="str_category">Categoty</string>
    <string name="str_new_category">New category</string>
    <string name="str_delete_category">Delete category(s)</string>
    <string name="str_add_new_category">Add a category</string>
    <string name="str_category_null">null</string>
</resources>