<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/noteMenuSaveNote"
        android:title="@string/str_save_note"
        android:icon="@drawable/ic_save"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/noteMenuDeleteNote"
        android:title="@string/str_delete_note"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/noteMenuFavorite"
        android:title="@string/str_favorite"
        android:icon="@drawable/ic_star_outline"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/noteMenuCategory"
        android:title="@string/str_category"
        android:icon="@drawable/ic_category"
        android:orderInCategory="4"
        app:showAsAction="ifRoom"
        />
</menu>