<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/newNote"
        android:title="@string/new_note"
        android:icon="@drawable/ic_note_add"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/searchNote"
        android:title="@string/str_search_note"
        android:icon="@drawable/ic_search"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/deleteNotes"
        android:title="@string/str_delete_notes"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"
        />
</menu>