<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <EditText
        android:id="@+id/edSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/str_seeking"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/bSearch"
        app:layout_constraintStart_toEndOf="@+id/bHome"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/bSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_search"
        android:contentDescription="@string/search_button_description"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvListNotes"
        android:layout_width="409dp"
        android:layout_height="684dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edSearch" />

    <ImageButton
        android:id="@+id/bHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back"
        android:contentDescription="@string/home_button_description"
        android:onClick="onClickHome"/>
</androidx.constraintlayout.widget.ConstraintLayout>